# athenadef

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  action.yml
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: auto-drive.yml  ci.yml  release.yml  suggest-missing-issues.yml  sync-master-issue.yml  tagging.yml
docs/: advanced-usage.md  architecture.md  aws-permissions.md  faq.md  implementation-plan.md  json-output.md  migration-guide.md  specification.md  technical-design.md  troubleshooting.md
examples/: README.md
examples/basic/: README.md  athenadef.yaml
examples/basic/salesdb/: customers.sql  orders.sql
examples/multi-database/: README.md  athenadef.yaml
examples/multi-database/analyticsdb/: page_views.sql  user_sessions.sql
examples/multi-database/marketingdb/: campaigns.sql  leads.sql
examples/multi-database/salesdb/: customers.sql  (+2 more)
examples/partitioned/: README.md  athenadef.yaml
src/: cli.rs  context.rs  differ.rs  file_utils.rs  lib.rs  main.rs  output.rs  target_filter.rs
src/aws/: athena.rs  glue.rs  mod.rs  s3.rs
src/commands/: apply.rs  export.rs  init.rs  mod.rs  plan.rs
src/types/: config.rs  diff_result.rs  mod.rs  query_execution.rs  table_definition.rs
tests/: command_e2e_test.rs  config_test.rs  differ_integration_test.rs  error_handling_test.rs  file_operations_test.rs  json_output_test.rs  multi_table_operations_test.rs  target_filter_test.rs
tests/common/: mod.rs
(+2 files in other folders)
