[package]
name = "athenadef"
version = "0.1.0"
edition = "2021"
authors = ["Shia <rise.shia@gmail.com>"]
license = "MIT"
description = "A CLI tool for AWS Athena schema management"
repository = "https://github.com/riseshia/athenadef"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-athena = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-glue = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1", features = ["behavior-version-latest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
similar = "2"
console = "0.16"
walkdir = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockall = "0.13"
tempfile = "3"
similar-asserts = "1"
tokio-test = "0.4"